# sarkit

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: pypi.yml  python-package.yml  tests.yml
data/: example-cphd-1.0.1.xml  example-crsd-1.0-draft.2025-02-25.xml  example-crsd-1.0.0.2024-12-30.xml  example-sicd-1.1.0.xml  example-sicd-1.2.1.xml  example-sicd-1.3.0.xml  example-sicd-1.4.0.xml  example-sidd-2.0.0.xml  example-sidd-3.0.0.xml
data/syntax_only/cphd/: 0000-syntax-only-cphd-1.1.0.xml  make_syntax_only_cphd_xmls.py  manual-syntax-only-cphd-mono-1.0.1.xml
data/syntax_only/cphd/stubs/: DwellTimeArray.xml  ErrorParameters.Bistatic.xml  ErrorParameters.Monostatic.xml  PVP.RcvAntenna.xml  PVP.TxAntenna.xml  ReferenceGeometry.Bistatic.xml  ReferenceGeometry.Monostatic.xml
data/syntax_only/crsd/: 0000-syntax-only-crsd-1.0.xml  0001-syntax-only-crsd-1.0.xml  0002-syntax-only-crsd-1.0.xml  0003-syntax-only-crsd-1.0.xml  make_syntax_only_crsd_xmls.py  manual-syntax-only-crsd-mono-sar-1.0-draft.2025-02-25.xml  manual-syntax-only-crsd-mono-sar-1.0.0.2024-12-30.xml
data/syntax_only/crsd/stubs/: Channel.Parameters.SARImage.DwellTimes.Array.xml  Data.Receive.SignalCompression.xml  ErrorParameters.SARImage.Bistatic.xml  ErrorParameters.XXSensor.xml  PPP.XMIndex.xml  SceneCoordinates.ReferenceSurface.HAE.xml  SupportArray.DwellTimeArray.xml  SupportArray.XMArray.xml
data/syntax_only/sicd/: 0000-syntax-only-sicd-1.1.xml  0001-syntax-only-sicd-1.2.1.xml  0002-syntax-only-sicd-1.3.0.xml  0003-syntax-only-sicd-1.1.xml  0004-syntax-only-sicd-1.2.1.xml  0005-syntax-only-sicd-1.4.0.xml  0006-syntax-only-sicd-1.4.0.xml  0007-syntax-only-sicd-1.1.xml  make_syntax_only_sicd_xmls.py  manual-syntax-only-sicd-1.1.0.xml
data/syntax_only/sicd/stubs/: ErrorStatistics-Bistatic.xml  ErrorStatistics.AdjustableParameterOffsets.xml  ErrorStatistics.Unmodeled.xml  PFA.xml  RMA-INCA.xml  RMA-RMAT.xml  RMA-RMCR.xml  RgAzComp.xml  SCPCOA.Bistatic.xml
data/syntax_only/sidd/: 0000-syntax-only-sidd-3.0.xml  0001-syntax-only-sidd-3.0.xml  0002-syntax-only-sidd-3.0.xml  0003-syntax-only-sidd-3.0.xml  0004-syntax-only-sidd-3.0.xml  0005-syntax-only-sidd-3.0.xml  0006-syntax-only-sidd-3.0.xml  0007-syntax-only-sidd-3.0.xml  0008-syntax-only-sidd-3.0.xml  0009-syntax-only-sidd-3.0.xml  0010-syntax-only-sidd-3.0.xml  0011-syntax-only-sidd-3.0.xml
docs/source/: conf.py  index.rst  user_guide.rst
docs/source/_templates/autosummary/: class.rst  (+2 more)
docs/source/reference/: constants.rst  cphd.rst  crsd.rst  index.rst  processing.rst  sarkit.rst  sicd.projection.rst  sicd.rst  sidd.rst  standards.rst  verification.rst  wgs84.rst  xmlhelp.rst
sarkit/: _xmlhelp.py  xmlhelp.py
sarkit/cphd/: __init__.py  _io.py  _xml.py
sarkit/crsd/: __init__.py  _io.py
sarkit/processing/: pixel_type.py  subimage.py
sarkit/processing/_sicd/: deskew.py  pixel_type.py  subimage.py
sarkit/sicd/: __init__.py  _io.py  _xml.py
sarkit/sicd/projection/: __init__.py  _calc.py
sarkit/sidd/: __init__.py  _io.py  _xml.py
sarkit/standards/: __init__.py  xml.py
sarkit/standards/cphd/: io.py
sarkit/standards/crsd/: __init__.py  computations.py  io.py  xml.py
sarkit/standards/general/: base.py  data_segment.py  format_function.py  nitf.py
sarkit/standards/sicd/: io.py  xml.py
sarkit/standards/sidd/: io.py  xml.py
sarkit/verification/: __init__.py  _cphd_consistency.py  _crsd_consistency.py  _sicd_consistency.py  consistency.py  cphd_consistency.py  crsd_consistency.py  sicd_consistency.py
sarpy/: __init__.py  constants.py
sarpy/processing/: __init__.py  deskew.py  pixel_type.py  subimage.py
sarpy/standards/: __init__.py  geocoords.py  xml.py
sarpy/standards/cphd/: io.py  xml.py
sarpy/standards/general/: base.py  data_segment.py  format_function.py  nitf.py  utils.py
sarpy/standards/sicd/: __init__.py  io.py  xml.py
sarpy/standards/sidd/: io.py  xml.py
sarpy/verification/: __init__.py  consistency.py  cphd_consistency.py  sicd_consistency.py
tests/core/: test_xmlhelp.py
tests/core/cphd/: test_xml.py
tests/core/crsd/: test_io.py
tests/core/sicd/: test_io.py  test_projection.py
tests/core/sidd/: test_io.py  test_xml.py
tests/processing/: test_deskew.py  test_pixel_type.py  test_subimage.py
tests/standards/: test_geocoords.py  test_sicd_projections.py  test_xml.py
tests/standards/cphd/: test_io.py  test_xml.py
tests/standards/crsd/: test_xml.py
tests/standards/general/: test_base.py  test_data_segment.py  test_format_function.py  test_nitf.py  test_nitf_image.py
tests/standards/sicd/: test_io.py  test_projection.py  test_xml.py
tests/standards/sidd/: test_io.py  test_xml.py
tests/verification/: test_consistency.py  test_cphd_consistency.py  test_crsd_consistency.py  test_sicd_consistency.py
(+8 files in other folders)
